<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_edit_text"
        android:title="@string/menu_edit_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_select_text"
        android:title="@string/menu_select_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_get_time"
        android:title="@string/menu_get_time"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_change_date"
        android:title="@string/menu_change_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_trigger_notification"
        android:title="@string/menu_trigger_notification"
        app:showAsAction="never" />
</menu>